Closed Bug 1795066 Opened 2 years ago Closed 2 years ago

Ctrl+Tab popup doesn't show up on dual monitor set-up.

Categories

(Core :: Widget: Gtk, defect, P3)

defect

Tracking

()

VERIFIED FIXED
108 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox105 --- wontfix
firefox106 --- wontfix
firefox107 --- wontfix
firefox108 --- verified
firefox109 --- verified

People

(Reporter: emilio, Assigned: stransky, Mentored)

References

(Blocks 2 open bugs)

Details

Attachments

(1 file)

If I enable browser.ctrlTab.sortByRecentlyUsed:true, and open Firefox on Wayland on my right monitor, the Ctrl+Tab popup doesn't show up. This is a regression from bug 1783437, Martin can you look when you have the chance?

https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=f29f4ba8462120b365d383032a470a73144af242&tochange=cafd5d446af8e3ebdd218096f7f8e65c9093caa8

Set release status flags based on info from the regressing bug 1783437

:stransky, since you are the author of the regressor, bug 1783437, could you take a look? Also, could you set the severity field?

For more information, please visit auto_nag documentation.

Actually it works today after a mutter update, so maybe it's a mutter bug that's been fixed upstream...

Oh, nvm, I'm on an X11 session r/n...

Set release status flags based on info from the regressing bug 1783437

AFAIK The ctrlTab dialog is supposed to be placed in center of screen. It's created as popup parented to toplevel window but we don't know our toplevel position so the ctrlTab dialog position on Wayland is purely random. The toplevel always looks like placed at 0,0 global coordinates.

As for this bug it looks like we use wrong coordinates based on recent monitor. We place the ctrlTab dialog relatively to toplevel but we use global coordinates according to monitor.

Err, looks like layout&Resize are the same.

Ahh, I found it. It works if the main FF window is not moved. When it's moved (before ctrl+tab) it's broken. Perhaps we propagate recent monitor info.

Priority: -- → P3
Flags: needinfo?(stransky)
Keywords: regression
No longer regressed by: 1783437

We can't report monitor/screen shift to layout on Wayland. It causes wrong popup placement as all window/popup coordinates are used relatively to parent on Wayland.
Also we can't get/set position of toplevel windows on Wayland.

Assignee: nobody → stransky
Status: NEW → ASSIGNED

Is this ready to land? :)

Flags: needinfo?(stransky)

(Thanks for fixing it btw!)

Landed, Thanks.

Flags: needinfo?(stransky)
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/7b5d3d446a23 [Wayland] Don't report monitor/screen shift to layout on Wayland r=emilio
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 108 Branch
Flags: qe-verify+

Reproduced the issue with Firefox 107.0a1 on Ubuntu 22.04 - Wayland by following the infos provided in Comment 0.

The issue is no longer reproducible on Firefox 108.0b5 and Firefox 109.0a1.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
See Also: → 1851225
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: