Bug 1795066 [Wayland] Don't report monitor/screen shift to layout on Wayland r=emilio

We can't report monitor/screen shift to layout on Wayland. It causes wrong popup placement as all window/popup coordinates are used relatively to parent on Wayland.
Also we can't get/set position of toplevel windows on Wayland.

Differential Revision: https://phabricator.services.mozilla.com/D160784